logs/frame.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Routes-2.4.1.dist-info'...
Listing './lib/python3.5/site-packages/frame'...
Compiling './lib/python3.5/site-packages/frame/_app.py'...
***   File "./lib/python3.5/site-packages/frame/_app.py", line 221
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/frame/caching.py'...
***   File "./lib/python3.5/site-packages/frame/caching.py", line 20
    print "Get cache %s" % key
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/frame/dotdict.py'...
***   File "./lib/python3.5/site-packages/frame/dotdict.py", line 24
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/frame/extensions'...
Compiling './lib/python3.5/site-packages/frame/extensions/sessions.py'...
***   File "./lib/python3.5/site-packages/frame/extensions/sessions.py", line 330
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/frame/extensions/templates.py'...
***   File "./lib/python3.5/site-packages/frame/extensions/templates.py", line 134
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/frame/postprocessors.py'...
***   File "./lib/python3.5/site-packages/frame/postprocessors.py", line 66
    print 'JSON'
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/frame/server'...
Compiling './lib/python3.5/site-packages/frame/server/http.py'...
***   File "./lib/python3.5/site-packages/frame/server/http.py", line 169
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/frame/static'...
Listing './lib/python3.5/site-packages/frame/static/css'...
Listing './lib/python3.5/site-packages/frame/static/js'...
Compiling './lib/python3.5/site-packages/frame/staticdispatcher.py'...
***   File "./lib/python3.5/site-packages/frame/staticdispatcher.py", line 232
    except EnvironmentError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/frame/templates'...
Listing './lib/python3.5/site-packages/frame/templates/__errors'...
Listing './lib/python3.5/site-packages/frame/templates/__errors/jinja2'...
Listing './lib/python3.5/site-packages/frame/templates/forms'...
Listing './lib/python3.5/site-packages/frame/templates/forms/elements'...
Listing './lib/python3.5/site-packages/frame/templates/forms/includes'...
Listing './lib/python3.5/site-packages/frame/templates/includes'...
Listing './lib/python3.5/site-packages/frame/templates/js'...
Listing './lib/python3.5/site-packages/frame/templates/macros'...
Listing './lib/python3.5/site-packages/frame/testsuite'...
Listing './lib/python3.5/site-packages/frame/testsuite/templates'...
Listing './lib/python3.5/site-packages/frame/testsuite/templates/controller'...
Compiling './lib/python3.5/site-packages/frame/toolset.py'...
***   File "./lib/python3.5/site-packages/frame/toolset.py", line 16
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/frame/util.py'...
***   File "./lib/python3.5/site-packages/frame/util.py", line 162
    except EnvironmentError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/frame-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/multipart-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/routes'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
